# finance-mcp

./: .gitignore  README.md  claude_desktop_config.json  client.py  main.py  pyproject.toml  requirements.txt  run.py  server.py  setup.py  simple_client.py  standalone_app.py
examples/: basic_usage.py  portfolio_analysis.py
tests/: test_integration.py
